# vince

./: .coverage  .gitignore  .markdownlint.json  README.md  main.py  pyproject.toml  validate_docs.py
.hypothesis/constants/: 058ce37f98a159e2  06c07fc27119f975  07374d4cd60d654d  0a6d594615b0c847  0b044481618af870  12d6bd67c1b52f15  1407aab3550e6a32  14c94e6fe727d479  1825160db9cef3c9  (+71 more)
docs/: README.md  api.md  config.md  errors.md  examples.md  overview.md  schemas.md  states.md  tables.md  testing.md
schemas/: config.schema.json  defaults.schema.json  offers.schema.json
tests/: __init__.py  conftest.py  mock_platform_handler.py  strategies.py  test_chop_command.py  test_command_handler_integration.py  test_config.py  test_cross_references.py  test_doc_code_sync.py  test_document_structure.py  test_dry_run_idempotence.py  test_errors.py  test_forget_command.py  test_import_usage.py  test_integration.py  test_list_command.py  test_macos_handler.py  test_main_entry.py  test_offer_command.py  test_pattern_usage.py  test_persistence.py  test_platform.py  test_reject_command.py  test_schema_accuracy.py  test_schema_migration.py  test_schema_validation.py  test_set_command.py  test_slap_command.py  test_source_doc_sync.py  test_state_doc_accuracy.py  test_state_machines.py  test_sync_command.py  test_tables_completeness.py  test_uti_map.py  test_validation_compliance.py  test_validation_coverage.py  test_validation_pattern_docs.py  test_validators.py  test_vince_validators.py  test_windows_handler.py
vince/: __init__.py  __main__.py  config.py  errors.py  main.py
(+91 files in other folders)
